--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Berkshire+Swash|Open+Sans");
+
 * {
   box-sizing: border-box; 
 }
@@ -8,8 +10,9 @@ body {
     font-size: 18px;
     font-family: Arial;
 }
+
 .container {
-    max-width: 70%;
+    max-width: 600px;
     background-image:
     width: 70%;
     margin: 20px auto;
@@ -18,24 +21,27 @@ body {
     padding: 20px;
     border-radius: 5px;
 }
-h1 {
+
+h1, h2 {
+    font-family: 'Berkshire Swash', cursive;
     text-align: center; 
-    font-weight: bold;
-}
-h2 {
-   text-align: center;
 }
 
 p {
+    font-family: 'Open Sans', sans-serif;
     font-weight: 400;
     text-align: justify;
 }
+
 a {
+    font-family: 'Open Sans', sans-serif;
     text-decoration: none;
 }
+
 a:hover {
     text-decoration: underline;
 }
+
 .highlight {
     text-decoration: underline;
 }
