--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
     background-color: #000;
     color: #fff;
     padding: 20px;
-    border-radius: 5px;
+    border-radius: 0;
 }
 
 h1, h2 {
